--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path dist"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.2",
     "@angular/cdk": "^8.0.1",
+    "@angular/cli": "^8.0.3",
     "@angular/common": "^8.0.2",
     "@angular/compiler": "^8.0.2",
+    "@angular/compiler-cli": "^8.0.2",
     "@angular/core": "^8.0.2",
     "@angular/forms": "^8.0.2",
     "@angular/material": "^8.0.1",
@@ -31,8 +34,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.3",
-    "@angular/compiler-cli": "^8.0.2",
     "@angular/language-service": "^8.0.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
