add 'remove char' btn, add 'cancel add status' btn

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --output-path dist"
+    "postinstall": "ng build --output-path dist",
+    "devsw": "ng build --prod && http-server -p 8080 -c-1 dist/dmHelper",
+    "dev": "nodemon server.js | ng serve"
   },
   "private": true,
   "dependencies": {
